// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthKeeper register multiple validators succeeds 1`] = `
Object {
  "calldataByteLength": 3108,
  "gasUsed": 714735,
}
`;

exports[`EthKeeper register multiple validators succeeds 2`] = `
Object {
  "calldataByteLength": 3108,
  "gasUsed": 620937,
}
`;

exports[`EthKeeper register single validator succeeds 1`] = `
Object {
  "calldataByteLength": 1284,
  "gasUsed": 312259,
}
`;
